# polymarket001

./: .env.example  README.ja.md  README.md  pyproject.toml
.github/workflows/: ci.yml
app/: __init__.py  config.py  logging_utils.py  main.py  models.py
app/clients/: __init__.py  external_price_client.py  market_data_client.py
app/engines/: backtest_engine.py  execution_engine.py  pnl_engine.py  price_aggregator.py  risk_engine.py  signal_engine.py
app/services/: market_mapper.py  metrics_server.py  order_manager.py  paper_broker.py  position_manager.py  reconciliation_service.py
configs/: dev.yaml  live.yaml  paper.yaml
pydantic/: __init__.py
scripts/: run_backtest.py  run_live.py  run_paper.py  run_shadow.py
tests/: conftest.py
tests/integration/: test_paper_trade_flow.py
tests/unit/: test_paper_broker.py  test_price_aggregator.py  test_risk_engine.py  test_signal_engine.py
