[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "polymarket001"
version = "0.1.0"
description = "Event-driven Polymarket BTC short-term trading system"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "aiohttp>=3.10.0",
  "prometheus_client>=0.20.0",
  "pydantic>=2.7.0",
  "py-clob-client>=0.20.0",
  "python-dotenv>=1.0.0",
  "pyyaml>=6.0.0",
  "structlog>=24.1.0",
  "websockets>=12.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2.0",
  "pytest-asyncio>=0.23.0",
]

[tool.setuptools.packages.find]
include = ["app*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100

